# arduino_from_source

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/arduino_core/: CMakeLists.txt  arduinoIncludeDirs.cmake
lib/build_files/: CMakeLists.txt  libc_init.c  samd21g18a.ld  toolchain.cmake
